--- a/04-EXPRESS-HTML-PAGES/views/add-product.html
+++ b/04-EXPRESS-HTML-PAGES/views/add-product.html
@@ -4,19 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Product</title>
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/product.css">    
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="/">Shop</a></li>
-                <li><a href="/admin/add-product">Add Product</a></li>
+    <header class="main-header">
+        <nav class="main-header__nav">
+            <ul class="main-header__item-list">
+                <li class="main-header__item"v><a href="/">Shop</a></li>
+                <li class="main-header__item"><a href="/admin/add-product">Add Product</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <form action="/admin/add-product" method="POST">
-            <input type="text" name="product-name">
+        <form class="product-form" action="/admin/add-product" method="POST">
+            <div class="form-control">
+                <label for="product-name">Product Name</label>
+                <input type="text" name="product-name" id="product-name">
+            </div>
             <button type="submit">Add Product</button>
         </form>
     </main>
