--- a/04-EXPRESS-HTML-PAGES/views/404.html
+++ b/04-EXPRESS-HTML-PAGES/views/404.html
@@ -15,6 +15,7 @@
             </ul>
         </nav>
     </header>
-    <h1>Ooops - Something went wrong - Page Not found</h1>
+    <h1>Ooops - Something went wrong</h1>
+    <h2>Page Not Found</h2>
 </body>
 </html>
